c programs.txt
1) #include <stdio.h>               

int main() {
 int i;
 for(i=1;i<=10;i++)
 {
    printf(" %d",i);
    if(i==5)
    break;
 }
    return 0;
}

 1 2 3 4 5

2)#include <stdio.h>

int main() {
   int n,i,c=0;
   scanf("%d",&n);
   for(i=2;i<n;i++)
   {
    if(n%i==0)
    {
      c++;
      break;
    }
   }
   if(c==0)
     printf("prime no");
   else
     printf("not a prime no");
}

5
prime no

3) #include <stdio.h>

int main() {
   int i;
   for(i=1;i<=5;i++)
   {
      printf("%d\n",i);
      if(i%2==0)
      continue;
      printf("python\n");
      printf("java\n");
   }
}

1
python
java
2
3
python
java
4
5
python
java

4) #include <stdio.h>

int main() {
   int i=1;
     vignan:
   printf(" %d",i);
   i++;
   if(i<=10)
   goto vignan;
}

1 2 3 4 5 6 7 8 9 10

5)#include <stdio.h>

int main() {
  int i,j;
  for(j=0;j<=5;j++)
  {
      for(i=1;i<=5;i++)
      {
          printf(" %d",i);
      }
      printf("\n");
  }
}

 1 2 3 4 5
 1 2 3 4 5
 1 2 3 4 5
 1 2 3 4 5
 1 2 3 4 5
 1 2 3 4 5

6)#include <stdio.h>

int main() {
  int i,j;
  for(j=1;j<=5;j++)
  {
      for(i=1;i<=5;i++)
      {
          printf(" *");
      }
      printf("\n");
  }
}

 * * * * *
 * * * * *
 * * * * *
 * * * * *
 * * * * *

7)#include <stdio.h>

int main() {
  int i,j;
  for(i=1;i<=5;i++)
  {
      for(j=1;j<=5;j++)
      {
          printf("%c ",64+j);
      }
      printf("\n");
  }
}

A B C D E 
A B C D E 
A B C D E 
A B C D E 
A B C D E 

8)
#include <stdio.h>

int main() {
  int i,j;
  for(i=5;i>=1;i--)
  {
      for(j=1;j<=i;j++)
      {
          printf("%d ",j);
      }
      printf("\n");
  }
}

1 2 3 4 5 
1 2 3 4 
1 2 3 
1 2 
1 

9)#include <stdio.h>

int main() {
  int i,j;
  for(i=5;i>=1;i--)
  {
      for(j=5;j>=i;j--)
      {
          printf("%d ",j);
      }
      printf("\n");
  }
}

5 
5 4 
5 4 3 
5 4 3 2 
5 4 3 2 1 

10)#include <stdio.h>
#include <string.h>
#include <math.h>
#include <stdlib.h>

int main() {

   int n;
    scanf("%d",&n);
    int a[n],i,j,t;
    for(i=0;i<n;i++)
    {
        scanf("%d",&a[i]);
    }
    for(i=0;i<n-1;i++)
    {
        for(j=i+1;j<n;j++)
        {
            if(a[i]>a[j])
            {
                t=a[i];
                a[i]=a[j];
                a[j]=t;
            }
        }
    }
    for(i=0;i<n;i++)
        printf("%d\n",a[i]);
    return 0;
}


Sample Input 0

5
54
68
25
14
74
Sample Output 0

14
25
54
68
74

11)#include <stdio.h>

int main() {
    int a[2][3]={{6,1,8},{5,4,9}};
    int i,j;
    for(i=0;i<2;i++)
    {
        for(j=0;j<3;j++)
        printf("%d ",a[i][j]);
        printf("\n");
    }
    return 0;
}

6 1 8 
5 4 9

12)#include <stdio.h>

int main() {
    int a[2][2];
    int i,j;
    for(i=0;i<2;i++)
    {
        for(j=0;j<2;j++)
        scanf("%d",&a[i][j]);
    }
    for(i=0;i<2;i++)
    {
      for(j=0;j<2;j++) 
      printf("%d ",a[i][j]);
        printf("\n");
    }
    return 0;
}

7
9
8
9
7 9 
8 9 

13)

#include <stdio.h>

int main() {
    int m,n;
    scanf("%d%d",&m,&n);
    int a[m][n];
    int i,j;
    {
        for(i=0;i<m;i++)
        {
        for(j=0;j<n;j++)
        scanf("%d",&a[i][j]);
    }
    for(i=0;i<m;i++)
    {
      for(j=0;j<n;j++) 
      printf("%d ",a[i][j]);
        printf("\n");
    }
    printf("\n");
     for(i=0;i<n;i++)
 {
     for(j=0;j<m;j++)
     printf("%d ",a[j][i]);
     printf("\n");
 }
    }
    return 0;
}
2 2
2
5
4
8
2 5 
4 8 

2 4 
5 8 

14)
#include <stdio.h>

int main() {
    int m,n;
    scanf("%d%d",&m,&n);
    int a[m][n];
    int i,j,s=0;
    for(i=0;i<m;i++)
    {
        for(j=0;j<n;j++)
        scanf("%d",&a[i][j]);
    }
    for(i=0;i<m;i++)
    {
      for(j=0;j<n;j++) 
      s=s+a[i][j];
    }
        printf("%d",s);
        return 0;
}

1
2
1
2
3

15)
#include <stdio.h>

int main() {
    int n;
    scanf("%d",&n);
    int a[n][n];
    int i,j,s=0;
    for(i=0;i<n;i++)
    {
        for(j=0;j<n;j++)
        scanf("%d",&a[i][j]);
    }
    for(i=0;i<n;i++)
    {
      for(j=0;j<n;j++)
      if(i==j)
      s=s+a[i][j];
    }
        printf("%d",s);
        return 0;
}

4
4
3
2
1
1
1
1
1
1
1
1
1
1
1
1
1
7

16)
#include <stdio.h>

int main() {
    int n;
    scanf("%d",&n);
    int a[n][n];
    int i,j,s=0;
    for(i=0;i<n;i++)
    {
        for(j=0;j<n;j++)
        scanf("%d",&a[i][j]);
    }
    for(i=0;i<n;i++)
    {
      for(j=0;j<n;j++)
      if(i+j==n-1)
      s=s+a[i][j];
    }
        printf("%d",s);
        return 0;
}
2
1
2
1
2
3

17)#include <stdio.h>

int main() {
   char str[50];
   printf("Enter a string");
   scanf("%[^\n]s",str);
   printf("%s",str);
        return 0;
}

18)
#include <stdio.h>

int main() {
   char str[50];
   printf("Enter a string ");
   fgets(str,50,stdin);
   printf("%s",str);
   return 0;
}

Enter a string jhgyujm
jhgyujm

19)[strcpy]

#include <stdio.h>
#include<string.h>
int main() {
    char str1[50],str2[50];
    scanf("%s",str1);
    strcpy(str2,str1);
    printf("%s\n%s",str1,str2);
    return 0;
}

hello ragni
hello
hello

20)#include <stdio.h>
#include<string.h>
int main() {
    char str1[50],str2[50];
    int i;
    scanf("%s",str1);
    for(i=0;str1[i]!='\0';i++)
    {
    str2[i]=str1[i];
    }
    str2[i]='\0';
    printf("%s\n%s",str1,str2);
    return 0;
}

hello ragni
hello ragni
hellohe
hello

21)[strcat]

#include <stdio.h>
#include<string.h>
int main() {
    char str1[50],str2[50];
    int i;
   scanf("%s",str1);
   scanf("%s",str2);
   strcat(str1,str2);
    printf("%s",str1);
    return 0;
}

hello world
helloworld
                                                                                                     

22)a) 
#include <stdio.h>
#include<string.h>
int main() {
    char str1[50],str2[50];
    int i;
  scanf("%s%s",str1,str2);
    for(i=0;str1[i]!='\0';i++)
    {
    str2[i]+str1[i];
    }
    str2[i]='\0';
    printf("%s%s",str1,str2);
    return 0;
}

hello world
helloworld


22)b)
#include <stdio.h>
#include<string.h>
int main() {
    char str1[50],str2[50],str3[100];
    scanf("%s%s",str1,str2);
    int i,j;
    for(i=0;str1[i]!='\0';i++)
    {
    str3[i]=str1[i];
    }
     for(j=0;str2[j]!='\0';j++)
    {
    str3[i+j]=str2[j];
    }
    str3[i+j]='\0';
    printf("%s",str3);
    return 0;
}

23)[strcmp]

#include <stdio.h>
#include<string.h>
int main() {
    char str1[50],str2[50],str3[100];
    scanf("%s",str1);
    scanf("%s",str2);
    int i=strcmp(str1,str2);
    if(i==0)
    {
   printf("strings are equal");
    }
    else
    {
      printf("strings are not equal");   
    }
    return 0;
}   

hello hello
strings are equal

24)[strrev]


#include <stdio.h>
#include<string.h>
int main() {
    char str1[50],str2[50];
    int i,n,j=0;
    scanf("%s",str1);
    for(n=0;str1[n]!='\0';n++);
    for(i=n-1;i>=0;i--)
    {
        str2[j]=str1[i];
        j++;
    }
    str2[j]='\0';
    printf("%s\n%s",str1,str2);
    return 0;
}
ingar
ingar
ragni

25)
#include <stdio.h>
#include<string.h>
int main() {
    char str[100];
    int i,alp=0,dig=0,sym=0;
    scanf("%[^\n]s",str);
    for(i=0;str[i]!='\0';i++)
    {
        if((str[i]>=65 && str[i]<=90)||(str[i]>=97 &&str[i]<=122))
        alp++;
        else if(str[i]>=48 && str[i]<=57)
        dig++;
        else
        sym++;
    }
    printf("%d\n%d\n%d",alp,dig,sym);
}

12abcd #$ rg*
6
2
5

26)

#include <stdio.h>
#include<string.h>
int main() {
    char str1[50];
    int i;
    scanf("%[^\n]s",str1);
    for(i=0;str1[i]!='\0';i++)
    {
        if(str1[i]>=65 && str1[i]<=90) 
        str1[i]=str1[i]+32;
       else if(str1[i]>=97 && str1[i]<=122)
       str1[i]=str1[i]-32;
    }
    printf("%s",str1);
}

proGRAm
PROgraM

27)
#include <stdio.h>
#include<string.h>
int main() {
    char str[50];
    int i,n,j,r;
    scanf("%[^\n]s",str);
    n=strlen(str);
    for(i=1;i<n;i=i+2)
    {
        r=(int)str[i]-48;
        for(j=0;j<r;j++)   
    {
    printf("%c",str[i-1]);
}
}
return 0;
}

k4s3b5
kkkksssbbbbb
28)

#include <stdio.h>

int main() {
    int a=10,b=19,c=70;
    if(c>b>a)
    {
        printf("java");
    }
    else
    {
        printf("python");
    }
    return 0;
}

python

=== Code Execution Successful ===

29)
#include <stdio.h>

int main() {
   int a=0;
   int r=(a==(a==1));
   printf("%d",r);
   return 0;
}

1

=== Code Execution Successful ===

30)
#include <stdio.h>

int main() {
   int a=65;
  switch(a)
  {
     
     case 90:
      printf("z");
      break;
     case 65:
      printf("A");
      break;
     case 'A':
      printf("A");
      break;
}
return 0;
}

ERROR!
/tmp/GRiOIKQ67S.c: In function 'main':
/tmp/GRiOIKQ67S.c:15:6: error: duplicate case value
   15 |      case 'A':
      |      ^~~~
/tmp/GRiOIKQ67S.c:12:6: note: previously used here
   12 |      case 65:
      |      ^~~~


=== Code Exited With Errors ===

















































